# PaddleOCR-VL-BaiduAIStudio

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  compose.yaml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  run.bat
app/: __main__.py  config.py  ocr_client.py  server.py  storage.py  task_queue.py  utils.py
app/static/: app.js  index.html  style.css
